fix contact form on mobile

--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -34,6 +34,6 @@ ul {
 
 @media only screen and (max-width: 771px) {
   .skillContainer {
-    flex-direction: column;
+    /* flex-direction: column; */
   }
 }
